--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
     --color-primary: #007AFF;
     --color-primary-rgb: 0, 122, 255;
     --color-gray: #ABB2C6;
+    --color-light-gray: #D9D9D9;
     --color-red: #FF3B30;
     --color-green: #27AE60;
 
@@ -27,6 +28,7 @@
     --font-size-15: 15px;
     --font-size-17: 17px;
     --font-size-28: 28px;
+    --font-size-52: 52px;
 
     --font-weight-normal: 400;
     --font-weight-medium: 500;
