--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     --color-red: #FF3B30;
     --color-green: #27AE60;
 
-    --header_background: rgba(0, 0, 0, 0);
+    --header_background: var(--color-white);
     --background_page: var(--color-white);
     --header_text: var(--color-black);
     --header_tint: var(--color-primary);
