--- a/src/panels/Home/Home.css
+++ b/src/panels/Home/Home.css
@@ -7,18 +7,23 @@
     --text_primary: var(--color-primary);
 }
 
-.Home__form {
+.Home__form,
+.Home__message {
     width: 100%;
-    padding-right: 40px;
-    padding-left: 40px;
+    padding: 40px;
 }
 
 .Home__Input {
     margin-bottom: 20px;
 }
 
+.Home__message {
+    text-align: center;
+}
+
 @media (max-width: 360px) {
-    .Home__form {
+    .Home__form,
+    .Home__message {
         padding-right: 20px;
         padding-left: 20px;
     }
