--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
     --tabbar_inactive_icon: var(--color-gray);
     --tabbar_active_icon: var(--color-primary);
     --content_tint_background: var(--color-white);
+    --separator_common: var(--color-white);
 
     --font-size-11: 11px;
     --font-size-13: 13px;
