--- a/src/panels/Settings/Settings.css
+++ b/src/panels/Settings/Settings.css
@@ -10,6 +10,12 @@
     display: none;
 }
 
+.Settings__ShopCard {
+    margin-bottom: 10px;
+    padding-right: 40px;
+    padding-left: 40px;
+}
+
 .Settings__cashiers {
     padding-bottom: 126px;
 }
