--- a/src/components/Popup/Dialog.css
+++ b/src/components/Popup/Dialog.css
@@ -45,7 +45,7 @@
     max-height: 94vh;
     padding-top: 30px;
     padding-right: 20px;
-    padding-bottom: calc(30px + var(--safe-area-inset-bottom));
+    padding-bottom: 30px;
     padding-left: 20px;
 
     overflow-y: auto;
