add addresses in Settings Panel

--- a/src/panels/Settings/Settings.css
+++ b/src/panels/Settings/Settings.css
@@ -16,6 +16,11 @@
     padding-left: 40px;
 }
 
+.Settings__Icon24Done {
+    color: var(--color-gray);
+}
+
+.Settings__addresses,
 .Settings__cashiers {
     padding-bottom: 126px;
 }
